# iggy

./: .asf.yaml  .codecov.yml  .commitlintrc.yaml  .convco  .dockerignore  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .typos.toml  .versionrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  Dockerfile.connectors  Dockerfile.debug  README.md  TOBEDECIDED.md  codecov.yml  docker-compose.yml  hk.pkl  justfile  licenserc.toml  mysql_source_mark_delete_fix_plan.md  rust-toolchain.toml  rustfmt.toml  vsr-server-test-status.md
core/ai/mcp/: Cargo.toml  Dockerfile  README.md  config.toml
core/ai/mcp/src/: api.rs  configs.rs  error.rs  main.rs  stream.rs
core/common/: Cargo.toml
core/common/src/: certificates.rs  consumer_group_client_state.rs  lib.rs  wire_conversions.rs
core/common/src/alloc/: buffer.rs  memory_pool.rs  mod.rs
core/common/src/collections/: segmented_slab.rs
core/common/src/commands/: mod.rs
core/common/src/configs/: mod.rs
core/common/src/error/: client_error.rs  iggy_error.rs
core/common/src/locking/: fast_async_lock.rs  mod.rs  std_sync_lock.rs  sync_lock.rs  tokio_lock.rs  wasm_lock.rs
core/common/src/messages/: mod.rs
core/common/src/messages_shared/: mod.rs  poll_messages.rs  polling_strategy.rs  send_messages.rs
core/common/src/sender/: mod.rs  quic_sender.rs  tcp_sender.rs  tcp_tls_sender.rs  websocket_sender.rs  websocket_tls_sender.rs
core/common/src/sharding/: namespace.rs  partition_location.rs
core/common/src/traits/: binary_client.rs  binary_transport.rs  bytes_serializable.rs  client.rs  cluster_client.rs  consumer_group_client.rs  consumer_offset_client.rs  message_client.rs  mod.rs  partition_client.rs  partitioner.rs  personal_access_token_client.rs  segment_client.rs  stream_client.rs  system_client.rs  topic_client.rs  user_client.rs
core/common/src/types/: http.rs  mod.rs  send_messages2.rs
core/common/src/utils/: byte_size.rs  crypto.rs  duration.rs  expiry.rs  mod.rs  net.rs  serde_secret.rs  text.rs  timestamp.rs  topic_size.rs  versioning.rs
core/connectors/elasticsearch/: Cargo.toml
core/connectors/elasticsearch/src/: lib.rs
core/connectors/sinks/flink_sink/: Cargo.toml  README.md
core/connectors/sinks/http_sink/: Cargo.toml  README.md  config.toml
core/connectors/sinks/otlp_sink/: Cargo.toml
core/connectors/sources/flink_source/: Cargo.toml  README.md
core/connectors/sources/jdbc_source/: Cargo.toml  README.md  config.toml
core/connectors/sources/meilisearch_source/: Cargo.toml  README.md  config.toml
core/connectors/sources/otlp_source/: Cargo.toml  README.md  config.toml
core/sdk/: Cargo.toml  README.md
core/sdk/src/: client_provider.rs  leader_aware.rs  lib.rs  prelude.rs  session.rs  vsr.rs
core/sdk/src/client_wrappers/: binary_client.rs  binary_cluster_client.rs  binary_consumer_group_client.rs  binary_consumer_offset_client.rs  binary_message_client.rs  binary_partition_client.rs  binary_personal_access_token_client.rs  binary_segment_client.rs  binary_stream_client.rs  binary_system_client.rs  binary_topic_client.rs  binary_user_client.rs  client_wrapper.rs  connection_info.rs  mod.rs
core/sdk/src/clients/: binary_cluster.rs  binary_consumer_group.rs  binary_consumer_offset.rs  binary_message.rs  binary_partitions.rs  binary_personal_access_tokens.rs  binary_segments.rs  binary_streams.rs  binary_system.rs  binary_topics.rs  binary_users.rs  client.rs  client_builder.rs  consumer.rs  consumer_builder.rs  mod.rs  producer.rs  producer_builder.rs  producer_config.rs  producer_dispatcher.rs  producer_error_callback.rs  producer_sharding.rs  send_mode.rs
core/sdk/src/connection/: mod.rs  transport.rs
core/sdk/src/consumer_ext/: consumer_message_ext.rs  consumer_message_trait.rs  mod.rs
core/sdk/src/http/: binary_consumer_groups.rs  cluster.rs  consumer_groups.rs  consumer_offsets.rs  http_client.rs  http_transport.rs  messages.rs  mod.rs  partitions.rs  personal_access_tokens.rs  segments.rs  streams.rs  system.rs  topics.rs  users.rs
core/sdk/src/protocol/: core.rs  mod.rs
core/sdk/src/quic/: quic_client.rs  quick_client.rs  skip_server_verification.rs
core/sdk/src/runtime/: mod.rs
core/sdk/src/stream_builder/: iggy_stream.rs  (+3 more)
core/simulator/: Cargo.toml
core/simulator/src/: bus.rs  client.rs  deps.rs  lib.rs  main.rs  packet.rs  replica.rs
core/simulator_ui/: Cargo.toml  README.md  Trunk.toml  index.html
core/simulator_ui/assets/: style.css
core/simulator_ui/src/: app.rs  brand.rs  bridge.rs  components.rs  helpers.rs  input.rs  main.rs  panels.rs  queries.rs  resources.rs  setup.rs  simulation.rs  theme.rs  tracing_layer.rs  types.rs  util.rs  visuals.rs  vocabulary.rs
core/transport/: Cargo.toml
core/transport/src/: lib.rs
examples/flink-data-producer/: Cargo.toml  README.md  setup-iggy.sh
examples/flink-data-producer/src/: main.rs
foreign/cpp/: .bazelrc  .clang-format  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  build.rs
foreign/cpp/examples/: example.cpp
foreign/cpp/include/: iggy.hpp
foreign/cpp/src/: client.cpp  client.rs  consumer.rs  consumer_group.rs  identifier.cpp  identifier.rs  lib.rs  message.cpp  messages.rs  stream_details.cpp  topic_details.cpp  type_conversion.rs
foreign/cpp/tests/: test.cpp  unit_tests.cpp
gateways/kafka/: Cargo.toml  README.md
gateways/kafka/docs/: MANUAL_TESTING.md  SCOPE.md  TEST_SUITE.md  kafka_api_keys_reference.md
gateways/kafka/scripts/: ci-wire-fixtures.sh
gateways/kafka/src/: error.rs  lib.rs  main.rs  server.rs
gateways/kafka/tests/: api_handler_tests.rs  broker_advertise_tests.rs  codec_tests.rs  decode_safety_tests.rs  decode_validation_tests.rs  golden_wire_fixtures_tests.rs  handler_regression_tests.rs  header_tests.rs  listener_robustness_tests.rs  metadata_regression_tests.rs  region_coverage_tests.rs  response_negative_tests.rs  review_regression_tests.rs  scope_coverage_tests.rs  server_e2e_tests.rs  server_integration_tests.rs  version_firewall_tests.rs
wireshark/: Cargo.toml  README.md  dissector.lua
wireshark/tests/: protocol_tests.rs
(+3148 files in other folders)
