# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy_common"
version = "0.7.0"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
edition = "2021"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming"]
categories = ["command-line-utilities", "database", "network-programming"]
homepage = "https://iggy.apache.org"
documentation = "https://iggy.apache.org/docs"
repository = "https://github.com/apache/iggy"
readme = "../README.md"


[dependencies]
aes-gcm = "0.10.3"
ahash = { version = "0.8.11", features = ["serde"] }
async-trait = "0.1.88"
trait-variant = { version = "0.1.2" }
base64 = "0.22.1"
bon = { version = "3.6.3" }
byte-unit = { version = "5.1.6", default-features = false, features = [
    "serde",
    "byte",
    "std",
] }
bytes = "1.10.1"
chrono = { version = "0.4.40" }
clap = { version = "4.5.37", features = ["derive"] }
crc32fast = "1.4.2"
derive_more = { version = "2.0.1", features = ["full"] }
humantime = "2.2.0"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", features = ["base64"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41" }
