# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy"
version = "0.7.0"
description = "Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
edition = "2021"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming"]
categories = ["command-line-utilities", "database", "network-programming"]
homepage = "https://iggy.apache.org"
documentation = "https://iggy.apache.org/docs"
repository = "https://github.com/apache/iggy"
readme = "../../README.md"

[features]
default = ["tokio_lock"]
#iggy-cli = ["dep:comfy-table", "dep:keyring", "dep:passterm"]
tokio_lock = []
fast_async_lock = ["dep:fast-async-mutex"]

[dependencies]
anyhow = "1.0.98"
async-broadcast = { version = "0.7.2" }
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.88"
bon = { version = "3.6.3" }
bytes = "1.10.1"
chrono = { version = "0.4.40" }
comfy-table = { version = "7.1.4", optional = false }
dashmap = "6.1.0"
dirs = "6.0.0"
flume = "0.11.1"
futures = "0.3.31"
futures-util = "0.3.31"
iggy_common = { path = "../common" }
iggy_binary_protocol = { path = "../binary_protocol" }
keyring = { version = "3.6.2", optional = false, features = [
    "sync-secret-service",
    "vendored",
] }
passterm = { version = "=2.0.1", optional = false }
quinn = { version = "0.11.7" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.7.0"
rustls = { version = "0.23.26", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = { version = "0.26.2" }
toml = "0.8.20"
tracing = { version = "0.1.41" }
trait-variant = { version = "0.1.2" }
webpki-roots = "0.26.8"
