[package]
name = "simulator"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
bytes = { workspace = true }
consensus = { path = "../consensus" }
futures = { workspace = true }
iggy_common = { path = "../common" }
journal = { path = "../journal" }
message_bus = { path = "../message_bus" }
metadata = { path = "../metadata" }
