[package]
name = "flink-data-producer"
version = "0.1.0"
edition = "2021"
authors = ["chiradip@chiradip.com, research@space-rf.org"]
license = "Apache-2.0"
description = "Example data producer for testing Apache Flink connectors with Iggy"

[dependencies]
iggy = { path = "../../core/sdk" }
bytes = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }