[package]  
name = "iggy-elasticsearch-connector"  
version = "0.1.0"  
edition = "2021"  
license = "Apache-2.0"  
description = "Elasticsearch connector for Apache Iggy"  
  
[dependencies]  
iggy = { path = "../../sdk" }  
elasticsearch = "8.5.0-alpha.1"  
serde = { version = "1.0", features = ["derive"] }  
serde_json = "1.0"  
tokio = { version = "1.0", features = ["full"] }  
tracing = "0.1"  
anyhow = "1.0"  
thiserror = "2.0"  
chrono = { version = "0.4", features = ["serde"] }  
uuid = { version = "1.0", features = ["v4"] }  
async-trait = "0.1"  
futures = "0.3"