[package]
name = "iggy-connector-flink-sink"
version = "0.1.0"
edition = "2021"
authors = ["Apache Iggy Contributors"]
license = "Apache-2.0"
description = "Apache Flink sink connector for Iggy message streaming"

[lib]
crate-type = ["cdylib"]
name = "iggy_connector_flink_sink"

[dependencies]
async-trait = "0.1"
iggy_connector_sdk = { path = "../../sdk" }
iggy = { path = "../../../sdk" }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
simd-json = { version = "0.15", features = ["serde_impl"] }
tokio = { version = "1.47", features = ["full"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
base64 = "0.22"
futures = "0.3"
thiserror = "2.0"
postcard = { version = "1.1", features = ["alloc"] }
dashmap = "6.1"
once_cell = "1.21"

# Flink-specific dependencies
tonic = "0.12"  # For gRPC communication with Flink
prost = "0.14"
hyper = { version = "1.5", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.6"
tokio-test = "0.4"
tempfile = "3.8"