[package]
name = "iggy-connector-flink-sink"
version = "0.1.0"
edition = "2021"
authors = ["chiradip@chiradip.com, research@space-rf.org"]
license = "Apache-2.0"
description = "Apache Flink sink connector for Iggy message streaming"

[lib]
crate-type = ["cdylib"]
name = "iggy_connector_flink_sink"

[dependencies]
async-trait = { workspace = true }
iggy_connector_sdk = { path = "../../sdk" }
iggy = { path = "../../../sdk" }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
postcard = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }

# Flink-specific dependencies
tonic = "0.12"  # For gRPC communication with Flink
prost = "0.14.1"
hyper = { version = "1.5", features = ["full"] }
chrono = { workspace = true }

[dev-dependencies]
mockito = "1.6"
tokio-test = "0.4"
tempfile = { workspace = true }