# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy-connector-flink-sink"
version = "0.1.0"
edition = "2021"
authors = ["chiradip@chiradip.com, research@space-rf.org"]
license = "Apache-2.0"
description = "Apache Flink sink connector for Iggy message streaming"

[package.metadata.cargo-machete]
ignored = ["dashmap", "once_cell"]

[lib]
crate-type = ["cdylib"]
name = "iggy_connector_flink_sink"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
iggy_connector_sdk = { path = "../../sdk" }
once_cell = { workspace = true }
postcard = { workspace = true }
# reqwest needs multipart feature not available in workspace version
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
simd-json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
# mockito is not in workspace dependencies, kept as explicit version
mockito = "1.6"
tempfile = { workspace = true }

