# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy_connector_otlp_sink"
version = "0.1.0"
description = "Iggy OTLP/gRPC sink connector — forwards logs, metrics, and traces from Iggy streams to any OpenTelemetry-compatible backend via the OTLP protocol"
edition = "2024"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming", "opentelemetry", "otlp"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://iggy.apache.org"
documentation = "https://iggy.apache.org/docs"
repository = "https://github.com/apache/iggy"
readme = "../../README.md"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
iggy_connector_sdk = { workspace = true }
reqwest = { workspace = true }
opentelemetry-proto = { version = "0.32.0", default-features = false, features = [
    "gen-tonic",
    "logs",
    "metrics",
    "trace",
] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport", "gzip"] }
tracing = { workspace = true }
