# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy-connector-flink-source"
version = "0.1.0"
edition = "2021"
authors = ["chiradip@chiradip.com, research@space-rf.org"]
license = "Apache-2.0"
description = "Apache Flink source connector for Iggy message streaming"

[lib]
crate-type = ["cdylib"]
name = "iggy_connector_flink_source"

[dependencies]
async-trait = { workspace = true }
iggy_connector_sdk = { path = "../../sdk" }
iggy = { path = "../../../sdk" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
simd-json = { workspace = true }
tokio = { workspace = true }
tokio-stream = "0.1"
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
postcard = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }

# Flink-specific dependencies
tonic = "0.12"
prost = "0.14.1"
hyper = { version = "1.5", features = ["full"] }
websocket = "0.27"  # For Flink's WebSocket API
rand = { workspace = true }

[dev-dependencies]
mockito = "1.6"
tokio-test = "0.4"
tempfile = { workspace = true }