# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy_connector_jdbc_source"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming", "jdbc", "source"]
categories = ["database"]
description = "Generic JDBC source connector for Iggy - supports MySQL, Oracle, SQL Server, H2, and any JDBC-compliant database"
readme = "README.md"

[package.metadata.cargo-machete]
ignored = ["dashmap", "humantime-serde"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }

# Required by source_connector! macro
dashmap = { workspace = true }

# For parsing duration strings
humantime-serde = "1.1"

# Shared serde helpers (SecretString serialization)
iggy_common = { workspace = true }

# Connector SDK
iggy_connector_sdk = { workspace = true }

# JNI for Java interop with invocation support
jni = { version = "0.21", features = ["invocation"] }

# For sanitizing passwords in logs
regex = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
toml = { workspace = true }
