# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "iggy_connector_otlp_source"
version = "0.4.1-edge.1"
description = "Iggy OTLP/gRPC source connector - receives logs, metrics, and traces from any OpenTelemetry SDK or Collector and writes them to Iggy streams as JSON"
edition = "2024"
license = "Apache-2.0"
keywords = ["iggy", "messaging", "streaming", "opentelemetry", "otlp"]
categories = ["command-line-utilities", "network-programming"]
homepage = "https://iggy.apache.org"
documentation = "https://iggy.apache.org/docs"
repository = "https://github.com/apache/iggy"
readme = "../../README.md"
publish = false

# dashmap and once_cell are not imported directly in this crate's source, but
# the source_connector! macro (in iggy_connector_sdk::source) expands bare
# `use dashmap::DashMap` and `use once_cell::sync::Lazy` into this crate's
# namespace, so they must be listed here. Remove them only after the SDK macro
# is updated to use `$crate::connector_macro_support::{DashMap, Lazy}`.
[package.metadata.cargo-machete]
ignored = ["dashmap", "once_cell"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = { workspace = true }
dashmap = { workspace = true }
iggy_connector_sdk = { workspace = true }
once_cell = { workspace = true }
opentelemetry-proto = { workspace = true, features = [
    "gen-tonic",
    "logs",
    "metrics",
    "trace",
] }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["transport", "router", "gzip"] }
tracing = { workspace = true }
