# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "kafka-message-gen"
version = "0.1.0"
edition = "2024"
description = "Generates binary Kafka protocol messages for testing the Iggy Kafka gateway"
license = "Apache-2.0"
repository = "https://github.com/apache/iggy"
keywords = ["kafka", "protocol", "testing", "iggy", "wire-format"]
publish = false

[[bin]]
name = "kafka-message-gen"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hex = "0.4"
iggy-gateway-kafka = { path = "../.." }
indexmap = "2"
kafka-protocol = "0.17"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
